--- a/css/style.css
+++ b/css/style.css
@@ -1946,6 +1946,8 @@ ORDER: Base + typography > general layout + grid > page layout > components
   width: 3.5rem;
   position: relative;
   color: #111111;
+  cursor: pointer;
+  z-index: 1000;
 }
 .sidebar__left .logo__menu .menu__icon {
   height: 3.5rem;
@@ -1985,10 +1987,6 @@ ORDER: Base + typography > general layout + grid > page layout > components
     grid-column: 2/3;
     flex-direction: row;
     grid-row: 1/2;
-    max-width: 0;
-    display: none;
-    visibility: hidden;
-    transition: all 0.3s ease-in-out;
   }
 }
 @media screen and (max-width: 20em) {
@@ -2002,12 +2000,24 @@ ORDER: Base + typography > general layout + grid > page layout > components
   transition: all 0.3s ease-in-out;
   width: 100%;
 }
+.sidebar__left__item > a {
+  text-decoration: none;
+}
 .sidebar__left__item > button {
   width: 100%;
   height: 100%;
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+@media screen and (max-width: 40.625em) {
+  .sidebar__left__item {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .sidebar__left__item:not(:last-child) {
+    display: none;
+  }
 }
 .sidebar__left__item:first-child {
   background-color: #f2ece2;
@@ -2019,6 +2029,7 @@ ORDER: Base + typography > general layout + grid > page layout > components
   padding: 2.5rem;
   height: 2.5rem;
   width: 2.5rem;
+  color: #111111;
 }
 @media screen and (min-width: 112.5em) {
   .sidebar__left__icon {
@@ -2030,8 +2041,8 @@ ORDER: Base + typography > general layout + grid > page layout > components
 @media screen and (max-width: 40.625em) {
   .sidebar__left__icon {
     padding: 1.7rem;
-    height: 2.3rem;
-    width: 2.3rem;
+    height: 3rem;
+    width: 3rem;
   }
 }
 .sidebar__left__doubt {
@@ -2297,11 +2308,11 @@ ORDER: Base + typography > general layout + grid > page layout > components
   margin-top: 1rem;
 }
 
-.menu__input {
+#leftMenuToggle {
   display: none;
 }
 
-.menu__input:checked + .menu__icon + .sidebar__left__items {
+.leftMenuToggle:checked + .menu__icon + .sidebar__left__items {
   visibility: visible;
   width: 100%;
   max-width: 100%;
