--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -48,6 +48,8 @@
       width: 3.5rem;
       position: relative;
       color: $color-dark;
+      cursor: pointer;
+      z-index: 1000;
       .menu__icon{
         height: 3.5rem;
         width: 3.5rem;
@@ -88,11 +90,6 @@
         grid-column: 2 / 3;
         flex-direction: row;
         grid-row: 1 / 2;
-        max-width: 0;
-        display: none;
-        visibility: hidden;
-        transition: all 0.3s ease-in-out;
-        // max-height: 0;S
       }
 
       @include response(small-phone){
@@ -108,12 +105,26 @@
       transition: all 0.3s ease-in-out;
       width: 100%;
 
+      & > a {
+        text-decoration: none;
+
+      }
+
       & > button {
         width: 100%;
         height: 100%;
         background-color: transparent;
         border: none;
         cursor: pointer;
+      }
+
+      @include response(mobile){
+        display: flex;
+        justify-content: flex-end;
+        &:not(:last-child) {
+          display: none;
+        }
+
       }
     }
 
@@ -130,6 +141,7 @@
       padding: 2.5rem;
       height: 2.5rem;
       width: 2.5rem;
+      color: $color-dark;
 
       @include response(big-desktop){
         padding: 3rem ;
@@ -139,8 +151,8 @@
 
       @include response(mobile){
         padding: 1.7rem ;
-        height: 2.3rem;
-        width: 2.3rem;
+        height: 3rem;
+        width: 3rem;
       }
     }
 
@@ -382,11 +394,11 @@
 }
 
 // MAIN menu
-.menu__input{
+#leftMenuToggle{
   display: none;
 }
 
-.menu__input:checked + .menu__icon + .sidebar__left__items{
+.leftMenuToggle:checked + .menu__icon + .sidebar__left__items{
   visibility: visible;
   width: 100%;
   max-width: 100%;
